Added Coming Events to the community page

--- a/content/community.html
+++ b/content/community.html
@@ -46,28 +46,48 @@ description = "NATS is a high performance messaging system that acts as a distri
   <div class="col-md-6 col-lg-3" id="meetup-con">
     <h2>Office Hours</h2>
     <p> Feel free to drop by <a href="https://github.com/nats-io/gnatsd#nats-office-hours" target="_blank">NATS Office Hours</a> to ask questions, cover issues, or just listen in and learn more about NATS.</p>
-    <h2>Events</h2>
-    <p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
-    <!-- <div class="meetup-con">
-      <iframe width="225" height="400" src="http://meetu.ps/2R2whQ" frameborder="0"></iframe>
-    </div> -->
-  </div>
-
-  <div class="col-md-6 col-lg-3" id="social-con">
-    <h2>Social</h2>
-    <ul class="social-list list-inline">
-      <li><a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a></li>
-      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a></li>
-      <li><a target="_blank" href="https://github.com/nats-io"><i class="icon-github"></i></a></li>
-      <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a></li>
-      <li><a target="_blank" href="https://www.reddit.com/r/nats_io"><img alt="reddit" src="/img/social/reddit.png"/></a></li>
-    </ul>
-  </div>
-
-  <div class="col-md-6 col-lg-3" id="newsletter-con">
     <h2>NATS Newsletter</h2>
     <p>Stay up to date with the latest information on NATS.</p>
     <a class="btn btn-primary" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd_MAN1MCDpSbZT7hrXmohGNpT0sUtxDCCOBJhmo_t2gvdHhQ/viewform">Sign Up!</a>
+    <div id="social-con">
+      <h2>Social</h2>
+      <ul class="social-list list-inline">
+        <li><a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a></li>
+        <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nats-io"><i class="icon-github"></i></a></li>
+        <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a></li>
+        <li><a target="_blank" href="https://www.reddit.com/r/nats_io"><img alt="reddit" src="/img/social/reddit.png"/></a></li>
+      </ul>
+    </div>
+  </div>
+
+
+
+  <div class="col-md-6 col-lg-6" id="newsletter-con">
+    <h2>Coming Events</h2>
+    <p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
+    <ul class="list-unstyled row">
+      <li class="col-md-6">
+        <h4>Strange Loop - Talk</h4>
+        <ul class="list-unstyled">
+          <li><strong>When:</strong> September 228-30, 2017</li>
+          <li><strong>Who:</strong> Tyler Treat</li>
+          <li><strong>What:</strong> So You Wanna Go Fast?</li>
+          <li><strong>Where:</strong> Peabody Opera House / St. Louis, MO</li>
+          <li><a href="https://www.thestrangeloop.com/2017/so-you-wanna-go-fast.html" target="_blank">More Information</a></li>
+        </ul>
+      </li>
+      <li class="col-md-6">
+        <h4>AllThingsOpen - Talk</h4>
+        <ul class="list-unstyled">
+          <li><strong>When:</strong> October 23-24, 2017</li>
+          <li><strong>Who:</strong> Waldemar Quevedo</li>
+          <li><strong>What:</strong> NATS: Simple, Secure, and Scalable Messaging for the Cloud Native Era</li>
+          <li><strong>Where:</strong> Raleigh Convention Center / Raleigh, NC</li>
+          <li><a href="https://allthingsopen.org/talk/nats-simple-secure-and-scalable-messaging-for-the-cloud-native-era/" target="_blank">More Information</a></li>
+        </ul>
+      </li>
+    </ul>
   </div>
 </div>
 
