--- a/content/download/pkoretic/qt-nats.html
+++ b/content/download/pkoretic/qt-nats.html
@@ -2,9 +2,9 @@
 title = "A Qt5 C++11 client for the NATS messaging system."
 description = ""
 downloadCategories = ["clients","community"]
-downloadTags = ["c++11"]
+downloadTags = ["c++"]
 [menu.main]
-  name = "Qt5 C++11"
+  name = "Qt5 C++"
   weight = 0
   identifier = "qt-nats"
   parent = "nats-community"
