Forgot said links on about

--- a/content/about.html
+++ b/content/about.html
@@ -88,6 +88,6 @@ description = "NATS is a high performance messaging queue system designed for di
 
 <h3>More NATS Resources</h3>
 <ul class="list-unstyled">
-  <li><a href="" target="_blank" class=""><i class="fa fa-slideshare" aria-hidden="true"></i> Slideshare</a></li>
-  <li><a href="" target="_blank" class=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></li>
+  <li><a href="https://www.slideshare.net/nats_io/presentations" target="_blank" class=""><i class="fa fa-slideshare" aria-hidden="true"></i> Slideshare</a></li>
+  <li><a href="https://www.youtube.com/channel/UCi0nerPAzqPiu6nZPw9imfQ" target="_blank" class=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></li>
 </ul>
