move to community download and reorganize html

--- a/content/download/byrnedo/php-nats-streaming.html
+++ b/content/download/byrnedo/php-nats-streaming.html
@@ -7,5 +7,5 @@ downloadTags = ["streaming", "php"]
   name = "PHP"
   weight = 0
   identifier = "PHP NATS Streaming"
-  parent = "streaming-clients"
+  parent = "streaming-community"
 +++
