--- a/content/community.html
+++ b/content/community.html
@@ -30,7 +30,7 @@ description = "NATS is a high performance messaging system that acts as a distri
 
   <div class="col-md-6 col-lg-3" id="contribute-con">
     <h2>Ways to Contribute</h2>
-    <p>The best way to get started contributing to NATS is to read our <a href="/documentation/CONTRIBUTING/">Contributor's Guide</a>. Here are some examples of how you can contribute:</p>
+    <p>The best way to get started contributing to NATS is to read our <a href="/documentation/contributing/">Contributor's Guide</a>. Here are some examples of how you can contribute:</p>
     <ul class="list-bullet-indent">
       <li>Report or Fix Bugs</li>
       <li>Add or Propose New Features</li>
@@ -116,7 +116,7 @@ description = "NATS is a high performance messaging system that acts as a distri
     <a target="_blank" href="http://www.williamsgarcia.com/"><img src="/img/partners/wg.jpg" class="img-responsive" alt="Williams Garcia"></a>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a target="_blank" href="http://www.minio.io/"><img src="/img/partners/minio.jpg" class="img-responsive" alt="Minio"></a>
+    <a target="_blank" href="https://www.minio.io/"><img src="/img/partners/minio.jpg" class="img-responsive" alt="Minio"></a>
   </div>
   <div class="col-xs-6 col-md-4">
     <a target="_blank" href="https://www.freebsd.org/cgi/ports.cgi?query=NATS&stype=all"><img src="/img/partners/freebsd.jpg" class="img-responsive" alt="FreeBSD"></a>
