First pass at changes listing support from Apcera to Synadia Fixes to incorrect docker 'apcera/gnatsd' references Fixes to slack invite document

--- a/content/index.html
+++ b/content/index.html
@@ -23,7 +23,7 @@ description = ""
             </p>
 
             <p class="bottom-info">NATS Server is a simple, high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
-            <p class="bottom-info">The Apcera team maintains the NATS Server (written in Go), NATS Streaming, and clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C#. The community has contributed a growing list of libraries, including Arduino, Rust, Lua, PHP, Perl, and <a href="/download">more</a>.</p>
+            <p class="bottom-info">The Synadia team maintains the NATS Server (written in Go), NATS Streaming, and clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C#. The community has contributed a growing list of libraries, including Arduino, Rust, Lua, PHP, Perl, and <a href="/download">more</a>.</p>
 
             <div class="row bottom-logo-container">
 
