--- a/content/support.html
+++ b/content/support.html
@@ -22,7 +22,7 @@ description = "NATS is a high performance messaging system that acts as a distri
     <p>Often the quickest way to get help is to start a discussion with other NATS users. There
       are <a href="/documentation/contributing#communityhelp">several public forums</a> where you can discuss NATS with other knowledgeable users.</p>
     <h2>Commercial Support and Services</h2>
-    <p>Our team has decades of experience in distributed systems messaging, and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Apcera supported clients listed <a href="/download">here</a>.</p>
+    <p>Our team has decades of experience in distributed systems messaging, and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Synadia supported clients listed <a href="/download">here</a>.</p>
     <p><a href="mailto:info@nats.io">Contact</a> us today to learn more about how we can help you get the most out of NATS in your environment.</p>
   </div>
 </div>
