My first commit fix slack invite url

--- a/content/community.html
+++ b/content/community.html
@@ -55,7 +55,7 @@ description = "NATS is a high performance messaging system that acts as a distri
         <li><a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a></li>
         <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a></li>
         <li><a target="_blank" href="https://github.com/nats-io"><i class="icon-github"></i></a></li>
-        <li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeNKjEqsH1dPKRO3YHPMZbRrHhnxsTxVQOkq7WvJ-8q1DBavA/viewform?usp=sf_link"><img alt="Slack" src="/img/social/slack.png"/></a></li>
+        <li><a target="_blank" href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM"><img alt="Slack" src="/img/social/slack.png"/></a></li>
         <li><a target="_blank" href="https://www.reddit.com/r/nats_io"><img alt="reddit" src="/img/social/reddit.png"/></a></li>
       </ul>
     </div>
