--- a/content/download/gr1n/nats-python.html
+++ b/content/download/gr1n/nats-python.html
@@ -2,10 +2,10 @@
 title = "NATS Python Client"
 description = "An async clojure client for the NATS messaging system."
 downloadCategories = ["clients","community"]
-downloadTags = ["pythonginger"]
+downloadTags = ["python"]
 [menu.main]
-name = "PythonGinger"
+name = "Python"
 weight = 0
-identifier = "PythonGinger"
+identifier = "Python"
 parent = "nats-community"
 +++
