--- a/content/about.html
+++ b/content/about.html
@@ -90,4 +90,5 @@ description = "NATS is a high performance messaging queue system designed for di
 <ul class="list-unstyled">
   <li><a href="https://www.slideshare.net/nats_io/presentations" target="_blank" class=""><i class="fa fa-slideshare" aria-hidden="true"></i> Slideshare</a></li>
   <li><a href="https://www.youtube.com/channel/UCi0nerPAzqPiu6nZPw9imfQ" target="_blank" class=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></li>
+  <li><a href="https://github.com/nats-io/nats-general/blob/master/reports/On_The_Radar_NATS.pdf" target="_blank" class=""><i class="fa fa-reports" aria-hidden="true"></i>Ovum's "On the Radar" Report</a></li>
 </ul>
