a few updates to image and text

--- a/content/about.html
+++ b/content/about.html
@@ -27,27 +27,27 @@ description = "NATS is a high performance messaging queue system designed for di
     <sub>(Chart source: <a href="http://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
   </div>
 </div>
-
-<hr>
+</br>
 
 <div class="row">
   <div class="col-md-6">
     <p>Written in Go, NATS is available as a client for approximately a dozen languages, many of which are supported by the Synadia team. Here’s the full list of <a href="/download">NATS clients</a>.</p>
   </div>
   <div class="col-md-6">
-    <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments.. You can learn more about the design characteristics in the <a href="/documentation/faq/">NATS FAQ</a>.</p>
+    <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments.. You can learn more about the design characteristics in the <a href="https://nats-io.github.io/docs/faq" target="_blank">NATS FAQ</a>.</p>
   </div>
 </div>
 
+<hr>
 <h3>Roadmap</h3>
-<p>We have exciting features lined up for the NATS community, shown below on our roadmap.  If you have any questions, comments, or requests don't hesitate to reach out to us - your input is valued.</p>
+<p>Our roadmap represents coming features lined up for the future of NATS. We are excited to bring these advances to the NATS community and look forward to your valuable input. Please contact us at <a href="mailto:info@nats.io?subject=NATS Roadmap">info@nats.io</a> or join our <a href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM" target="_blank">Slack channel</a> with any questions, comments, or requests.</p>
 
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
-        <img class="img-responsive center-block" alt="NATS Roadmap Image" src="/img/roadmap.png" BORDER="0">
+        <img class="img-responsive center-block" alt="NATS Roadmap Image" src="/img/roadmap.png" height="700" width="900" border="0">
     </div>
-  </div>
-</div>
+ </div>
+
 
 
 
