--- a/content/about.html
+++ b/content/about.html
@@ -39,7 +39,7 @@ description = "NATS is a high performance messaging queue system designed for di
 </div>
 
 <hr>
-<h3>Roadmap</h3>
+<h3 id="roadmap">Roadmap</h3>
 <p>Our roadmap represents coming features lined up for the future of NATS. We are excited to bring these advances to the NATS community and look forward to your valuable input. Please contact us at <a href="mailto:info@nats.io?subject=NATS Roadmap">info@nats.io</a> or join our <a href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM" target="_blank">Slack channel</a> with any questions, comments, or requests.</p>
 
 <div class="row">
