fix broken links on Support page to Community page

--- a/content/support.html
+++ b/content/support.html
@@ -17,10 +17,10 @@ description = "NATS is a high performance messaging system that acts as a distri
   <div class="col-md-12">
     <h2>Reporting Bugs</h2>
     <p>If you'd like to report a bug/defect, please open a GitHub Issue on the relevant NATS repository.
-      We've provided some guidelines for doing so <a href="/documentation/contributing#githubissues">here</a>.</p>
+      We've provided some guidelines for doing so <a href="/contributing#githubissues">here</a>.</p>
     <h2>Community Support for NATS and Clients</h2>
     <p>Often the quickest way to get help is to start a discussion with other NATS users. There
-      are <a href="/documentation/contributing#communityhelp">several public forums</a> where you can discuss NATS with other knowledgeable users.</p>
+      are <a href="/contributing#communityhelp">several public forums</a> where you can discuss NATS with other knowledgeable users.</p>
     <h2>Commercial Support and Services</h2>
     <p>The NATS team, under the stewardship of <a href="https://synadia.com" target="_blank">Synadia Communications, Inc.</a>, has decades of experience in distributed systems messaging and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Synadia supported clients listed <a href="/download">here</a>.</p>
     <p>Contact our world class team at <a href="mailto:info@synadia.com">Synadia</a> for commercial support and professional services to help you best leverage NATS for your business.</p>
