update http to https to resolve mixed-content alert from Netlify

--- a/content/about.html
+++ b/content/about.html
@@ -24,7 +24,7 @@ description = "NATS is a high performance messaging queue system designed for di
   <div id="canvas-con" class="col-md-8 col-md-offset-2">
     <h4 class="text-center">Brokered Throughput</h4>
     <canvas id="throughputChart"></canvas>
-    <sub>(Chart source: <a href="http://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
+    <sub>(Chart source: <a href="https://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
   </div>
 </div>
 </br>
