updating documentation link to new site various link updates (slack, faq)

--- a/content/about.html
+++ b/content/about.html
@@ -34,13 +34,13 @@ description = "NATS is a high performance messaging queue system designed for di
     <p>Written in Go, NATS is available as a client for approximately a dozen languages, many of which are supported by the Synadia team. Here’s the full list of <a href="/download">NATS clients</a>.</p>
   </div>
   <div class="col-md-6">
-    <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments.. You can learn more about the design characteristics in the <a href="https://nats-io.github.io/docs/faq" target="_blank">NATS FAQ</a>.</p>
+    <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments. You can learn more about the design characteristics in the <a href="https://docs.nats.io/faq" target="_blank">NATS FAQ</a>.</p>
   </div>
 </div>
 
 <hr>
 <h3 id="roadmap">Roadmap</h3>
-<p>Our roadmap represents coming features lined up for the future of NATS. We are excited to bring these advances to the NATS community and look forward to your valuable input. Please contact us at <a href="mailto:info@nats.io?subject=NATS Roadmap">info@nats.io</a> or join our <a href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM" target="_blank">Slack channel</a> with any questions, comments, or requests.</p>
+<p>Our roadmap represents coming features lined up for the future of NATS. We are excited to bring these advances to the NATS community and look forward to your valuable input. Please contact us at <a href="mailto:info@nats.io?subject=NATS Roadmap">info@nats.io</a> or join our <a href="https://slack.nats.io" target="_blank">Slack channel</a> with any questions, comments, or requests.</p>
 
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
