add Twitter social card preview for downloads

--- a/content/download/nats-io/stan.go.html
+++ b/content/download/nats-io/stan.go.html
@@ -1,6 +1,6 @@
 +++
 title = "Go NATS Streaming"
-description = ""
+description = "NATS Streaming Go Client for the NATS Messaging System"
 downloadCategories = ["streaming","supported"]
 downloadTags = ["streaming","go"]
 [menu.main]
