--- a/content/download/nats-io/nats.net.html
+++ b/content/download/nats-io/nats.net.html
@@ -2,7 +2,7 @@
 title = "C# NATS Client"
 description = ""
 downloadCategories = ["clients","supported"]
-downloadTags = ["c#"]
+downloadTags = ["c-sharp"]
 [menu.main]
   name = "C#"
   weight = 0
