--- a/content/download/nats-io/stan.net.html
+++ b/content/download/nats-io/stan.net.html
@@ -2,7 +2,7 @@
 title = "The NATS .NET C# Streaming Client"
 description = ""
 downloadCategories = ["streaming","supported"]
-downloadTags = ["streaming","c#"]
+downloadTags = ["streaming","c-sharp"]
 [menu.main]
   name = "C#"
   weight = 0
