update schedule - add speaker section

--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -4,97 +4,203 @@ title = "NATS Community | Get involved in the NATS Cloud Native Community"
 cssid = "event"
 description = "NATS is a high performance messaging system that acts as a distributed messaging queue for cloud native applications, IoT device messaging, and microservices architecture."
 +++
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+}
 
+.grid-item {
+  padding: 20px;
+  text-align: left;
+}
+</style>
 
 <div class="row">
     <div class="col-md-12">
-        <div class="page-header">
+       <div class="page-header"></div>
             <h1>NATS Connect Live!</h1>
-            <h4><p>April 9, 2020 @8am PDT</p>
+        <h4>April 16, 2020 @8am PDT</h4>
 
-                <p>Join the NATS Team for our first live virtual conference with topics and community speakers geared towards developers and end users.</p></h4>
-                <a class="btn btn-primary" href="https://zoom.us/webinar/register/WN_XFq8XLMRT7OzK6KBvlN-zA">Register Now</a>
-
-        </div>
+        Join the NATS Team for our first free live virtual conference with topics and community speakers geared towards developers and end users. Be sure to register now and don't miss this inaugural day of NATS learning and community sharing.
+              <br><br>  <a class="btn btn-primary" target="_blank" href="https://zoom.us/webinar/register/WN_XFq8XLMRT7OzK6KBvlN-zA">Register Now</a>
     </div>
-
-
-
 </div>
-
 
 <div class="table-responsive">
     <table class="table table-striped">
         <thead><h2>Agenda</h2>
+        <p>The schedule is broken into 20 minute presentation slots; including slides, demos, and questions, with a 10 minute break after each block. Agenda is subject to change.</p>
         <tr>
             <th class="col-md-2">Talk Topic</th>
-            <th class="col-md-3">Speaker</th>
-            <th class="col-md-1">Time Allotted</th>
+            <th class="col-md-2">Speaker(s)</th>
+            <th class="col-md-1">Scheduled Start</th>
             <th class="col-md-3">Description</th>
         </tr>
         </thead>
-        <tbody>
+
+ <tbody>
         <tr>
             <td>Welcome & Introduction</td>
             <td>Derek Collison</td>
-            <td>20 mins</td>
+            <td>8:00am</td>
             <td></td>
         </tr>
         <tr>
             <td>NATS & Kubernetes</td>
             <td>Wally Quevedo</td>
-            <td>15 mins</td>
+            <td>8:20am</td>
             <td>Past, Present, Future</td>
         </tr>
         <tr>
             <td>NATS & Rust</td>
-            <td>Tyler Neely / Dwayne</td>
-            <td>15 mins</td>
+            <td>Tyler Neely / Dwayne Bradley
+            <td>8:40am</td>
             <td></td>
         </tr>
         <tr>
-            <td>NATS at Mastercard</td>
-            <td>Colin Sullivan</td>
-            <td>15 mins</td>
-            <td></td>
+            <td>Resgate.io</td>
+            <td>Samuel Jirénus</td>
+            <td>9:00am</td>
+            <td>Building REST And real-time APIs with Messaging</td>
         </tr>
-        <tr>
+        <tr class="success">
             <td colspan="4" align="center">Break</td>
         </tr>
         <tr>
-            <td>NATS at Sam's Club</td>
-            <td>Matt Ryner / Michael</td>
-            <td>15 mins</td>
-            <td></td>
+            <td>NATS as Service Mesh</td>
+            <td>Dale Bingham</td>
+            <td>9:20am</td>
+            <td>Using NATS to Implement Service Mesh Functionality</td>
         </tr>
-        <tr>
+         <tr>
             <td>NATS JetStream</td>
             <td>R.I. Pienaar</td>
-            <td>15 mins</td>
+            <td>9:40am</td>
             <td></td>
         </tr>
         <tr>
             <td>NATS Websockets</td>
             <td>Alberto Ricart / Ivan Kozlovic</td>
-            <td>15 mins</td>
+            <td>10:00am</td>
             <td></td>
         </tr>
         <tr>
             <td>NATS Surveyor</td>
-            <td>R.I. Pienaar / Colin Sullivan</td>
-            <td>15 mins</td>
+            <td>Colin Sullivan / R.I. Pienaar</td>
+            <td>10:20am</td>
             <td></td>
+        </tr>
+        <tr>
+            <td>NATS at Sam's Club</td>
+            <td>Matt Ryner & Michael Tyler</td>
+            <td>10:40am</td>
+            <td></td>
+        </tr>
+        <tr class="success">
+            <td colspan="4" align="center">Break</td>
+        </tr>
+        <tr>
+            <td>NATS & WASM</td>
+            <td>Kevin Hoffman</td>
+            <td>11:15am</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>NATS & Augmented Reality</td>
+            <td>Ron Britvich</td>
+            <td>11:35am</td>
+            <td>Using NATS as our distributed messaging system for Worlds' Augmented Reality Platform (WARP) with Unity.</td>
         </tr>
         <tr>
             <td>NATS Leafnodes</td>
             <td>Derek Collison</td>
-            <td>15 mins</td>
+            <td>12:00pm</td>
             <td>The Best of All Worlds</td>
         </tr>
+
         <tr>
+            <td>Running NGS - DevOps</td>
+            <td>David Kemper / Phil Pennock</td>
+            <td>12:20pm</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>NGS - Getting Started</td>
+            <td>Wally Quevedo</td>
+            <td>12:40pm</td>
+            <td></td>
+        </tr>
+
+        <tr class="success">
             <td colspan="4" align="center">Break</td>
         </tr>
 
+        <tr>
+            <td>NATS Community & Ecosystem Engagement</td>
+            <td>Ginger Collison</td>
+            <td>1:00pm</td>
+            <td>Code contributions, hosting Meetups, NATS evangelism</td>
+        </tr>
+        <tr>
+            <td>NATS Future Work & Wrap Up</td>
+            <td>Derek Collison</td>
+            <td>1:15pm</td>
+            <td></td>
+        </tr>
+        <tr class="info">
+            <td colspan="4" align="center">Audience Q & A</td>
+        </tr>
         </tbody>
     </table>
+</div>
+
+<div><a name="speaker-info"></a><h2>Speaker Information</h2></div>
+  <div class="grid-container">
+
+      <div class="grid-item">
+          <strong>Derek Collison</strong><br>
+          Synadia, CEO<br>
+              <a href="https://github.com/derekcollison" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+                  &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Colin Sullivan</strong><br>
+              Synadia, Product Manager<br>
+              <a href="https://github.com/colinsullivan1" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+             &nbsp;<a href="https://www.linkedin.com/in/colinsullivan/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+              <a href="https://twitter.com/colinsullivan01" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Wally Quevedo</strong><br>
+              Synadia, Engineer<br>
+              <a href="https://github.com/wallyqs" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+              <a href="https://www.linkedin.com/in/wallyqs/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+             &nbsp;<a href="https://twitter.com/wallyqs" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+          &nbsp;
+      </div>
+
+      <div class="grid-item">
+          <strong>Samuel Jirénius</strong><br>
+          Rescore<br>
+          <a href="https://github.com/jirenius" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/jirenius/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+          &nbsp;<a href="mailto:samuel@jirenius.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Dale Bingham</strong><br>
+          Cingulara<br>
+          <a href="https://github.com/cingulara" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://twitter.com/cingulara" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+          &nbsp;<a href="mailto:dale.bingham@cingulara.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Kevin Hoffman</strong><br>
+          <br>
+          <a href="https://github.com/derekcollison" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px">
+          &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
 </div>
