--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -23,7 +23,7 @@ description = "NATS is a high performance messaging system that acts as a distri
             <h1>NATS Connect Live!</h1>
         <h4>April 16, 2020 @8am PDT</h4>
 
-        Join the NATS Team for our first free live virtual conference with topics and community speakers geared towards developers and end users. Be sure to register now and don't miss this inaugural day of NATS learning and community sharing.
+        Join the NATS Team for our first free live virtual conference with topics and community speakers geared towards developers and end users. Register now and don't miss this inaugural day of NATS learning and community sharing.
               <br><br>  <a class="btn btn-primary" target="_blank" href="https://zoom.us/webinar/register/WN_XFq8XLMRT7OzK6KBvlN-zA">Register Now</a>
     </div>
 </div>
@@ -31,7 +31,7 @@ description = "NATS is a high performance messaging system that acts as a distri
 <div class="table-responsive">
     <table class="table table-striped">
         <thead><h2>Agenda</h2>
-        <p>The schedule is broken into 20 minute presentation slots; including slides, demos, and questions, with a 10 minute break after each block. Agenda is subject to change.</p>
+        <p>All times are PDT with the schedule broken into 20 minute presentation slots; including slides, demos, and questions, with a 10 minute break after each block. Agenda is subject to change.</p>
         <tr>
             <th class="col-md-2">Talk Topic</th>
             <th class="col-md-2">Speaker(s)</th>
@@ -55,7 +55,7 @@ description = "NATS is a high performance messaging system that acts as a distri
         </tr>
         <tr>
             <td>NATS & Rust</td>
-            <td>Tyler Neely / Dwayne Bradley
+            <td>Tyler Neely
             <td>8:40am</td>
             <td></td>
         </tr>
@@ -65,37 +65,43 @@ description = "NATS is a high performance messaging system that acts as a distri
             <td>9:00am</td>
             <td>Building REST And real-time APIs with Messaging</td>
         </tr>
+        <tr>
+            <td>Pub/Sub on the Power Grid</td>
+            <td>Dwayne Bradley</td>
+            <td>9:20am</td>
+            <td></td>
+        </tr>
         <tr class="success">
             <td colspan="4" align="center">Break</td>
         </tr>
         <tr>
             <td>NATS as Service Mesh</td>
             <td>Dale Bingham</td>
-            <td>9:20am</td>
+            <td>9:40am</td>
             <td>Using NATS to Implement Service Mesh Functionality</td>
         </tr>
          <tr>
             <td>NATS JetStream</td>
             <td>R.I. Pienaar</td>
-            <td>9:40am</td>
-            <td></td>
+            <td>10:00am</td>
+            <td>The future of NATS Streaming</td>
         </tr>
         <tr>
             <td>NATS Websockets</td>
             <td>Alberto Ricart / Ivan Kozlovic</td>
-            <td>10:00am</td>
+            <td>10:20am</td>
             <td></td>
         </tr>
         <tr>
             <td>NATS Surveyor</td>
             <td>Colin Sullivan / R.I. Pienaar</td>
-            <td>10:20am</td>
-            <td></td>
+            <td>10:40am</td>
+            <td>Simplified monitoring for complex deployments</td>
         </tr>
         <tr>
             <td>NATS at Sam's Club</td>
-            <td>Matt Ryner & Michael Tyler</td>
-            <td>10:40am</td>
+            <td>Matt Ryner / Michael Tyler</td>
+            <td>11:00am</td>
             <td></td>
         </tr>
         <tr class="success">
@@ -104,35 +110,33 @@ description = "NATS is a high performance messaging system that acts as a distri
         <tr>
             <td>NATS & WASM</td>
             <td>Kevin Hoffman</td>
-            <td>11:15am</td>
+            <td>11:40am</td>
             <td></td>
         </tr>
         <tr>
             <td>NATS & Augmented Reality</td>
             <td>Ron Britvich</td>
-            <td>11:35am</td>
-            <td>Using NATS as our distributed messaging system for Worlds' Augmented Reality Platform (WARP) with Unity.</td>
+            <td>12:00pm</td>
+            <td>NATS in Unity - Worlds' Augmented Reality Platform loves NATS</td>
         </tr>
         <tr>
             <td>NATS Leafnodes</td>
             <td>Derek Collison</td>
-            <td>12:00pm</td>
+            <td>12:20pm</td>
             <td>The Best of All Worlds</td>
         </tr>
-
         <tr>
-            <td>Running NGS - DevOps</td>
-            <td>David Kemper / Phil Pennock</td>
-            <td>12:20pm</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>NGS - Getting Started</td>
+            <td>NGS Getting Started</td>
             <td>Wally Quevedo</td>
-            <td>12:40pm</td>
+            <td>1:00pm</td>
             <td></td>
         </tr>
-
+        <tr>
+            <td>Running NGS</td>
+            <td>David Kemper / Phil Pennock</td>
+            <td>12:40pm</td>
+            <td>A DevOps perspective to running NATS globally</td>
+        </tr>
         <tr class="success">
             <td colspan="4" align="center">Break</td>
         </tr>
@@ -140,13 +144,13 @@ description = "NATS is a high performance messaging system that acts as a distri
         <tr>
             <td>NATS Community & Ecosystem Engagement</td>
             <td>Ginger Collison</td>
-            <td>1:00pm</td>
+            <td>1:40pm</td>
             <td>Code contributions, hosting Meetups, NATS evangelism</td>
         </tr>
         <tr>
             <td>NATS Future Work & Wrap Up</td>
             <td>Derek Collison</td>
-            <td>1:15pm</td>
+            <td>1:50pm</td>
             <td></td>
         </tr>
         <tr class="info">
@@ -157,6 +161,8 @@ description = "NATS is a high performance messaging system that acts as a distri
 </div>
 
 <div><a name="speaker-info"></a><h2>Speaker Information</h2></div>
+<p>Speaker information for the event is listed below. We encourage participants to contact the Synadia team via our <a href="https://slack.nats.io" target="_blank">NATS Slack Channel</a>.</p>
+
   <div class="grid-container">
 
       <div class="grid-item">
@@ -166,22 +172,38 @@ description = "NATS is a high performance messaging system that acts as a distri
           &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
                   &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
       </div>
-      <div class="grid-item">
-          <strong>Colin Sullivan</strong><br>
-              Synadia, Product Manager<br>
-              <a href="https://github.com/colinsullivan1" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
-             &nbsp;<a href="https://www.linkedin.com/in/colinsullivan/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
-              <a href="https://twitter.com/colinsullivan01" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+           <div class="grid-item">
+          <strong>Dale Bingham</strong><br>
+          Cingulara<br>
+          <a href="https://github.com/cingulara" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://twitter.com/cingulara" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+          &nbsp;<a href="mailto:dale.bingham@cingulara.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
       </div>
       <div class="grid-item">
-          <strong>Wally Quevedo</strong><br>
-              Synadia, Engineer<br>
-              <a href="https://github.com/wallyqs" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
-              <a href="https://www.linkedin.com/in/wallyqs/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
-             &nbsp;<a href="https://twitter.com/wallyqs" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+          <strong>Dwayne Bradley</strong><br>
+          <a href="https://github.com/dwaynebradley" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/dwayne-bradley-a9658115b/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px">
+          &nbsp;<a href="https://twitter.com/dwaynebradley70" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+          <a href="https://gitlab.com/dwaynebradley70" target="_blank"><img src="/img/social/gitlab.png"height="25px" width="25px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Ron Britvich</strong><br>
+          Worlds, Inc.<br>
+          <a href="mailto:ron@britvich.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Alex Ellis</strong><br>
+          OpenFaaS<br>
+          <a href="https://github.com/alexellis" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://twitter.com/alexellisuk" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
           &nbsp;
       </div>
-
+      <div class="grid-item">
+          <strong>Kevin Hoffman</strong><br>
+          <a href="https://github.com/derekcollison" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px">
+          &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
       <div class="grid-item">
           <strong>Samuel Jirénius</strong><br>
           Rescore<br>
@@ -190,17 +212,61 @@ description = "NATS is a high performance messaging system that acts as a distri
           &nbsp;<a href="mailto:samuel@jirenius.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
       </div>
       <div class="grid-item">
-          <strong>Dale Bingham</strong><br>
-          Cingulara<br>
-          <a href="https://github.com/cingulara" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
-          &nbsp;<a href="https://twitter.com/cingulara" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
-          &nbsp;<a href="mailto:dale.bingham@cingulara.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
+          <strong>David Kemper</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/davidkemper" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://www.linkedin.com/in/david-kemper-531bb038/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
       </div>
       <div class="grid-item">
-          <strong>Kevin Hoffman</strong><br>
-          <br>
-          <a href="https://github.com/derekcollison" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
-          &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px">
-          &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+          <strong>Ivan Kozlovic</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/kozlovic" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://www.linkedin.com/in/ivankozlovic/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
       </div>
+      <div class="grid-item">
+          <strong>Tyler Neely</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/spacejam" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://www.linkedin.com/in/tyler-neely-9b524640/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Phil Pennock</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/philpennock" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://www.linkedin.com/in/philpennock/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>R.I. Pienaar</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/ripienaar" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://twitter.com/ripienaar" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Wally Quevedo</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/wallyqs" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://www.linkedin.com/in/wallyqs/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://twitter.com/wallyqs" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Alberto Ricart</strong><br>
+          Synadia, Engineer<br>
+          <a href="https://github.com/aricart" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          <a href="https://www.linkedin.com/in/albertoricart/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Chris Sachs</strong><br>
+          Swim, Co-Founder & Chief Architect<br>
+          <a href="https://github.com/c9r" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/cdsachs/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+          <a href="https://twitter.com/c9r" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Colin Sullivan</strong><br>
+              Synadia, Product Manager<br>
+              <a href="https://github.com/colinsullivan1" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+             &nbsp;<a href="https://www.linkedin.com/in/colinsullivan/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+              <a href="https://twitter.com/colinsullivan01" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+
 </div>
