--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -9,11 +9,13 @@ description = "NATS is a high performance messaging system that acts as a distri
   display: grid;
   grid-template-columns: auto auto auto;
   padding: 10px;
+  grid-gap: 5px;
 }
 
 .grid-item {
   padding: 20px;
   text-align: left;
+  border: 1px solid #dfdfdf;
 }
 
 table tr td.centery{
