schedule update - add Kyle Thomas

--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -9,11 +9,13 @@ description = "NATS is a high performance messaging system that acts as a distri
   display: grid;
   grid-template-columns: auto auto auto;
   padding: 10px;
+  grid-gap: 5px;
 }
 
 .grid-item {
   padding: 20px;
   text-align: left;
+  border: 1px solid #dfdfdf;
 }
 
 table tr td.centery{
@@ -61,13 +63,13 @@ table tr td.centery{
             <td>NATS & Rust</td>
             <td>Tyler Neely
             <td class="centery">8:40am</td>
-            <td></td>
+            <td>Writing a NATS Client in a Language Geared for Performance and Correctness</td>
         </tr>
         <tr>
             <td>Resgate.io</td>
             <td>Samuel Jirénus</td>
             <td class="centery">9:00am</td>
-            <td>Building REST And real-time APIs with Messaging</td>
+            <td>Building REST and real-time APIs with Messaging</td>
         </tr>
         <tr>
             <td>Pub/Sub on the Power Grid</td>
@@ -145,6 +147,12 @@ table tr td.centery{
             <td colspan="4" align="center">Break</td>
         </tr>
         <tr>
+            <td>Bearer Tokens in NATS</td>
+            <td>Kyle Thomas</td>
+            <td class="centery">1:30pm</td>
+            <td>Distributed Identity & Permissioning: The case for bearer tokens in NATS</td>
+        </tr>
+        <tr>
             <td>Swim.ai</td>
             <td>Chris Sachs</td>
             <td class="centery">1:30pm</td>
@@ -176,14 +184,14 @@ table tr td.centery{
 
       <div class="grid-item">
           <strong>Derek Collison</strong><br>
-          Synadia, CEO<br>
+          <a href="https://synadia.com" target="_blank">Synadia</a>, Founder & CEO<br>
               <a href="https://github.com/derekcollison" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
                   &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
       </div>
            <div class="grid-item">
           <strong>Dale Bingham</strong><br>
-          Cingulara<br>
+          <a href="https://cingulara.com" target="_blank">Cingulara</a><br>
           <a href="https://github.com/cingulara" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           &nbsp;<a href="https://twitter.com/cingulara" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
           &nbsp;<a href="mailto:dale.bingham@cingulara.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
@@ -202,14 +210,14 @@ table tr td.centery{
       </div>
       <div class="grid-item">
           <strong>Alex Ellis</strong><br>
-          OpenFaaS<br>
+          <a href="https://openfaas.com" target="_blank">OpenFaaS</a><br>
           <a href="https://github.com/alexellis" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           &nbsp;<a href="https://twitter.com/alexellisuk" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
           &nbsp;
       </div>
       <div class="grid-item">
           <strong>Kevin Hoffman</strong><br>
-          Distinguished Engineer, Capital One<br>
+          Distinguished Engineer @ <a href="https://capitalone.com" target="_blank">Capital One</a><br>
           <a href="https://twitter.com/kevinhoffman" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
       </div>
       <div class="grid-item">
@@ -264,7 +272,7 @@ table tr td.centery{
       </div>
       <div class="grid-item">
           <strong>Chris Sachs</strong><br>
-          Swim, Co-Founder & Chief Architect<br>
+          Co-Founder & Chief Architect @ <a href="https://swim.ai" target="_blank">Swim</a><br>
           <a href="https://github.com/c9r" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           &nbsp;<a href="https://www.linkedin.com/in/cdsachs/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
           <a href="https://twitter.com/c9r" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
@@ -275,6 +283,13 @@ table tr td.centery{
               <a href="https://github.com/colinsullivan1" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
              &nbsp;<a href="https://www.linkedin.com/in/colinsullivan/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
               <a href="https://twitter.com/colinsullivan01" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Kyle Thomas</strong><br>
+          Founder & CEO @ <a href="https://provide.services" target="_blank">Provide</a><br>
+          <a href="https://github.com/kthomas" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/kylethomas/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+          <a href="https://twitter.com/kylebt" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
       </div>
 
 </div>
