--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -288,7 +288,7 @@ table tr td.centery{
           <strong>Kyle Thomas</strong><br>
           Founder & CEO @ <a href="https://provide.services" target="_blank">Provide</a><br>
           <a href="https://github.com/kthomas" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
-          &nbsp;<a href="https://www.linkedin.com/in/kylethomas/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://www.linkedin.com/in/kylebthomas/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
           <a href="https://twitter.com/kylebt" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
       </div>
 
